// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputChrome Snapshots matches snapshot in empty input state 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "paddingBottom": 0,
    }
  }
>
  <View
    intensity={80}
    style={
      {
        "paddingBottom": 34,
        "paddingHorizontal": 12,
        "paddingTop": 8,
      }
    }
    testID="blur-view"
    tint="light"
  >
    <View
      style={
        [
          {
            "height": 0.5,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#D1D1D6",
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          accessibilityHint="Double tap to open model picker"
          accessibilityLabel="Active model: GPT-4o"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "paddingLeft": 12,
                "paddingRight": 8,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "#5856D61A",
                "borderRadius": 9999,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 13,
                  "fontWeight": "500",
                  "maxWidth": 160,
                },
                {
                  "color": "#5856D6",
                },
              ]
            }
          >
            GPT-4o
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "marginLeft": 2,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 16,
                  },
                  {
                    "color": "#5856D6",
                  },
                ]
              }
            >
              ›
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityHint="thinkingLevel.cycleHint"
        accessibilityLabel="thinkingLevel.title: thinkingLevel.off"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "gap": 2,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 6,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 9,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 12,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 15,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 18,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        accessibilityLabel="Context usage: 25 percent"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 25,
          }
        }
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            height={26}
            width={26}
          >
            <View
              cx={13}
              cy={13}
              fill="none"
              opacity={0.3}
              r={11.5}
              stroke="#D1D1D6"
              strokeWidth={3}
            />
            <View
              cx={13}
              cy={13}
              fill="none"
              origin="13, 13"
              r={11.5}
              rotation={-90}
              stroke="#5856D6"
              strokeDasharray="72.25663103256524"
              strokeDashoffset={54.19247327442393}
              strokeLinecap="round"
              strokeWidth={3}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        accessibilityHint="Double tap to attach a file or image"
        accessibilityLabel="Attach file"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          viewBox="0 0 24 24"
          width={20}
        >
          <View
            d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"
            stroke="#8E8E93"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </View>
      </View>
      <TextInput
        accessibilityHint="Type your message here"
        accessibilityLabel="Message input"
        blurOnSubmit={false}
        multiline={true}
        onChangeText={[Function]}
        onContentSizeChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Message"
        placeholderTextColor="#8E8E93"
        returnKeyType="default"
        scrollEnabled={false}
        style={
          [
            {
              "flex": 1,
              "fontSize": 15,
              "lineHeight": 20,
              "maxHeight": 120,
              "paddingBottom": 8,
              "paddingHorizontal": 14,
              "paddingTop": 8,
            },
            {
              "backgroundColor": "#F2F2F7",
              "borderRadius": 17,
              "color": "#1C1C1E",
              "height": 36,
            },
          ]
        }
        textAlignVertical="top"
        value=""
      />
      <View
        style={
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          accessibilityLabel="Send message, disabled"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              },
              {
                "backgroundColor": "#F2F2F7",
              },
            ]
          }
        >
          <View
            fill="none"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <View
              d="M8 2.5L8 13.5M8 2.5L3.5 7M8 2.5L12.5 7"
              stroke="#8E8E93"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`InputChrome Snapshots matches snapshot in streaming state 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "paddingBottom": 0,
    }
  }
>
  <View
    intensity={80}
    style={
      {
        "paddingBottom": 34,
        "paddingHorizontal": 12,
        "paddingTop": 8,
      }
    }
    testID="blur-view"
    tint="light"
  >
    <View
      style={
        [
          {
            "height": 0.5,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#D1D1D6",
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          accessibilityHint="Double tap to open model picker"
          accessibilityLabel="Active model: GPT-4o"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "paddingLeft": 12,
                "paddingRight": 8,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "#5856D61A",
                "borderRadius": 9999,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 13,
                  "fontWeight": "500",
                  "maxWidth": 160,
                },
                {
                  "color": "#5856D6",
                },
              ]
            }
          >
            GPT-4o
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "marginLeft": 2,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 16,
                  },
                  {
                    "color": "#5856D6",
                  },
                ]
              }
            >
              ›
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityHint="thinkingLevel.cycleHint"
        accessibilityLabel="thinkingLevel.title: thinkingLevel.off"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "gap": 2,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 6,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 9,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 12,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 15,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 18,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        accessibilityLabel="Context usage: 25 percent"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 25,
          }
        }
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            height={26}
            width={26}
          >
            <View
              cx={13}
              cy={13}
              fill="none"
              opacity={0.3}
              r={11.5}
              stroke="#D1D1D6"
              strokeWidth={3}
            />
            <View
              cx={13}
              cy={13}
              fill="none"
              origin="13, 13"
              r={11.5}
              rotation={-90}
              stroke="#5856D6"
              strokeDasharray="72.25663103256524"
              strokeDashoffset={54.19247327442393}
              strokeLinecap="round"
              strokeWidth={3}
            />
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Generating response"
        accessibilityRole="image"
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 2,
            "height": 12,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 1.5,
                "height": 12,
                "width": 3,
              },
              {
                "backgroundColor": "#5856D6",
              },
              {
                "transform": [
                  {
                    "scaleY": 0.3,
                  },
                ],
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "borderRadius": 1.5,
                "height": 12,
                "width": 3,
              },
              {
                "backgroundColor": "#5856D6",
              },
              {
                "transform": [
                  {
                    "scaleY": 0.3,
                  },
                ],
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "borderRadius": 1.5,
                "height": 12,
                "width": 3,
              },
              {
                "backgroundColor": "#5856D6",
              },
              {
                "transform": [
                  {
                    "scaleY": 0.3,
                  },
                ],
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "borderRadius": 1.5,
                "height": 12,
                "width": 3,
              },
              {
                "backgroundColor": "#5856D6",
              },
              {
                "transform": [
                  {
                    "scaleY": 0.3,
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        accessibilityHint="Double tap to attach a file or image"
        accessibilityLabel="Attach file"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          viewBox="0 0 24 24"
          width={20}
        >
          <View
            d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"
            stroke="#8E8E93"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </View>
      </View>
      <TextInput
        accessibilityHint="Type your message here"
        accessibilityLabel="Message input"
        blurOnSubmit={false}
        multiline={true}
        onChangeText={[Function]}
        onContentSizeChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Message"
        placeholderTextColor="#8E8E93"
        returnKeyType="default"
        scrollEnabled={false}
        style={
          [
            {
              "flex": 1,
              "fontSize": 15,
              "lineHeight": 20,
              "maxHeight": 120,
              "paddingBottom": 8,
              "paddingHorizontal": 14,
              "paddingTop": 8,
            },
            {
              "backgroundColor": "#F2F2F7",
              "borderRadius": 17,
              "color": "#1C1C1E",
              "height": 36,
            },
          ]
        }
        textAlignVertical="top"
        value=""
      />
      <View
        style={
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          accessibilityLabel="Stop generation"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              },
              {
                "backgroundColor": "#5856D6",
              },
            ]
          }
        >
          <View
            fill="none"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <View
              fill="#FFFFFF"
              height={10}
              rx={2}
              width={10}
              x={3}
              y={3}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`InputChrome Snapshots matches snapshot when text input has content 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "paddingBottom": 0,
    }
  }
>
  <View
    intensity={80}
    style={
      {
        "paddingBottom": 34,
        "paddingHorizontal": 12,
        "paddingTop": 8,
      }
    }
    testID="blur-view"
    tint="light"
  >
    <View
      style={
        [
          {
            "height": 0.5,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#D1D1D6",
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          accessibilityHint="Double tap to open model picker"
          accessibilityLabel="Active model: GPT-4o"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "paddingLeft": 12,
                "paddingRight": 8,
                "paddingVertical": 6,
              },
              {
                "backgroundColor": "#5856D61A",
                "borderRadius": 9999,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 13,
                  "fontWeight": "500",
                  "maxWidth": 160,
                },
                {
                  "color": "#5856D6",
                },
              ]
            }
          >
            GPT-4o
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "marginLeft": 2,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 16,
                  },
                  {
                    "color": "#5856D6",
                  },
                ]
              }
            >
              ›
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityHint="thinkingLevel.cycleHint"
        accessibilityLabel="thinkingLevel.title: thinkingLevel.off"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "gap": 2,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 6,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 9,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 12,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 15,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 2,
                  "width": 4,
                },
                {
                  "backgroundColor": "#8E8E93",
                  "height": 18,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        accessibilityLabel="Context usage: 25 percent"
        accessibilityRole="progressbar"
        accessibilityValue={
          {
            "max": 100,
            "min": 0,
            "now": 25,
          }
        }
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            height={26}
            width={26}
          >
            <View
              cx={13}
              cy={13}
              fill="none"
              opacity={0.3}
              r={11.5}
              stroke="#D1D1D6"
              strokeWidth={3}
            />
            <View
              cx={13}
              cy={13}
              fill="none"
              origin="13, 13"
              r={11.5}
              rotation={-90}
              stroke="#5856D6"
              strokeDasharray="72.25663103256524"
              strokeDashoffset={54.19247327442393}
              strokeLinecap="round"
              strokeWidth={3}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        accessibilityHint="Double tap to attach a file or image"
        accessibilityLabel="Attach file"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "height": 44,
            "justifyContent": "center",
            "width": 44,
          }
        }
      >
        <View
          fill="none"
          height={20}
          viewBox="0 0 24 24"
          width={20}
        >
          <View
            d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"
            stroke="#8E8E93"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </View>
      </View>
      <TextInput
        accessibilityHint="Type your message here"
        accessibilityLabel="Message input"
        blurOnSubmit={false}
        multiline={true}
        onChangeText={[Function]}
        onContentSizeChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Message"
        placeholderTextColor="#8E8E93"
        returnKeyType="default"
        scrollEnabled={false}
        style={
          [
            {
              "flex": 1,
              "fontSize": 15,
              "lineHeight": 20,
              "maxHeight": 120,
              "paddingBottom": 8,
              "paddingHorizontal": 14,
              "paddingTop": 8,
            },
            {
              "backgroundColor": "#F2F2F7",
              "borderRadius": 17,
              "color": "#1C1C1E",
              "height": 36,
            },
          ]
        }
        textAlignVertical="top"
        value="Hello, how are you?"
      />
      <View
        style={
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          accessibilityLabel="Send message"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              },
              {
                "backgroundColor": "#5856D6",
              },
            ]
          }
        >
          <View
            fill="none"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <View
              d="M8 2.5L8 13.5M8 2.5L3.5 7M8 2.5L12.5 7"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
